# pastebinit-rs

./: Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  cargo.yml
src/: args.rs  main.rs
src/pastebin_server/: centos.rs  debian.rs  linkof.rs  meson.rs  mod.rs  openstack.rs  provider_trait.rs  textdb.rs
